--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,658 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+:root {
+  font-size: 62.5%;
+}
+
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+*, *:before, *:after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+:focus, :active {
+  outline: none;
+}
+
+a:focus, a:active, a {
+  outline: none;
+  text-decoration: none;
+}
+
+nav, footer, header, aside {
+  display: block;
+}
+
+html, body {
+  height: 100%;
+  widows: 100%;
+  font-size: 100%;
+  line-height: 1;
+  font-size: 20px;
+}
+
+input, button, textarea {
+  font-family: inherit;
+}
+
+input::-ms-clear {
+  display: none;
+}
+
+button {
+  cursor: pointer;
+}
+
+button::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+a, a::visited {
+  text-decoration: none;
+}
+
+ul li {
+  list-style: none;
+}
+
+img {
+  vertical-align: top;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-size: inherit;
+  font-weight: 400;
+}
+
+.modal-wrapper {
+  max-width: 100vw;
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #202124da;
+}
+
+.modal {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 90%;
+          flex: 0 0 90%;
+  padding: 2rem 1rem;
+  background-color: rgba(30, 72, 92, 0.4);
+  border: 0.1rem solid #666F7A;
+  border-radius: .5rem;
+  -webkit-box-shadow: 0 0 0.5em 1rem rgba(105, 105, 105, 0.466);
+          box-shadow: 0 0 0.5em 1rem rgba(105, 105, 105, 0.466);
+}
+
+.modal__txt {
+  margin: 0 0 .5em 0;
+  letter-spacing: .2rem;
+  text-transform: capitalize;
+  color: #919191;
+}
+
+.modal__lbls {
+  display: block;
+  padding: 0 .3rem 0;
+  margin: 0 0 1.5rem 0;
+  font-size: 1.4rem;
+}
+
+.modal__inps {
+  width: 100%;
+  padding: .3em .5em;
+}
+
+.modal__inps:focus {
+  -webkit-box-shadow: 0 0 1rem 0 #d6d4d4;
+          box-shadow: 0 0 1rem 0 #d6d4d4;
+}
+
+.custom-chbx {
+  margin: 0 0 1.5rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-size: 1.4rem;
+}
+
+.custom-chbx__lbl {
+  display: block;
+  position: relative;
+  width: 3rem;
+  height: 2rem;
+  margin: 0 0 .5rem 0;
+}
+
+.custom-chbx__lbl_circle {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 100%;
+  height: 1rem;
+  background-color: #fff;
+  border-radius: 1rem;
+}
+
+.custom-chbx__lbl_circle::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  width: 1.8rem;
+  height: 1.8rem;
+  background-color: #aaa8a8;
+  border: 0.075rem solid rgba(255, 255, 255, 0.658);
+  border-radius: 50%;
+  -webkit-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+
+.custom-chbx__lbl_text {
+  text-align: center;
+  color: #919191;
+}
+
+.custom-chbx__chbx {
+  display: none;
+}
+
+.custom-chbx__chbx:checked + .custom-chbx__lbl_circle::before {
+  left: calc(50% - .28rem);
+  background-color: #FDB700;
+}
+
+.btns {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.btns__btn {
+  padding: .3em 1em;
+  font-size: 1.8rem;
+  color: #fff;
+  border-radius: .3em;
+  -webkit-transition: all .2s linear;
+  -o-transition: all .2s linear;
+  transition: all .2s linear;
+}
+
+.btns__registr {
+  background-color: rgba(140, 255, 95, 0.575);
+}
+
+.btns__registr:hover {
+  -webkit-box-shadow: 0 0 0.5rem 0.3rem rgba(140, 255, 95, 0.3);
+          box-shadow: 0 0 0.5rem 0.3rem rgba(140, 255, 95, 0.3);
+}
+
+.btns__submit {
+  background-color: rgba(95, 111, 255, 0.575);
+}
+
+.btns__submit:hover {
+  -webkit-box-shadow: 0 0 0.5rem 0.3rem rgba(95, 111, 255, 0.3);
+          box-shadow: 0 0 0.5rem 0.3rem rgba(95, 111, 255, 0.3);
+}
+
+.modal-error {
+  padding: .5em;
+  font-size: 1.4rem;
+  text-align: center;
+  text-transform: capitalize;
+  color: red;
+}
+
+.wrapper {
+  position: relative;
+  min-height: 100vh;
+  overflow: hidden;
+}
+
+.head {
+  background-color: #5526ff;
+}
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1.5rem;
+}
+
+.header {
+  padding: 1rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__logo {
+  font-size: 2rem;
+  text-transform: capitalize;
+  color: #fff;
+}
+
+.header__curr-user {
+  display: block;
+  position: relative;
+  padding: .6rem;
+  color: #fff;
+  border: 0.1rem solid #d4d4d4;
+  border-radius: .4rem;
+  -webkit-transition: all .3s ease-in-out;
+  -o-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+  cursor: pointer;
+}
+
+.header__curr-user::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: calc(-10% - 1rem);
+  -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+          transform: translateY(-50%);
+  border-style: solid;
+  border-width: .6rem 1.2rem .6rem 0;
+  border-color: transparent #fff transparent transparent;
+}
+
+.header__curr-user:hover {
+  background-color: #fff;
+  color: #3b3a3a;
+}
+
+.header__menu-list {
+  padding: 5rem 1rem;
+  position: absolute;
+  top: 0;
+  left: 100%;
+  width: 100%;
+  height: 100vh;
+  z-index: 111;
+  background-color: white;
+  -webkit-transition: all .6s ease-out;
+  -o-transition: all .6s ease-out;
+  transition: all .6s ease-out;
+}
+
+.header__menu-list_active {
+  left: 0;
+}
+
+.header__menu-list_exit {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  z-index: 2222;
+  cursor: pointer;
+}
+
+.header__menu-list_exit > span {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%) rotateZ(45deg);
+      -ms-transform: translateY(-50%) rotate(45deg);
+          transform: translateY(-50%) rotateZ(45deg);
+  width: 100%;
+  height: .2rem;
+  background-color: #636363;
+}
+
+.header__menu-list_exit > span::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  -webkit-transform: translateY(-50%) rotateZ(-90deg);
+      -ms-transform: translateY(-50%) rotate(-90deg);
+          transform: translateY(-50%) rotateZ(-90deg);
+  width: 100%;
+  height: 100%;
+  background-color: #636363;
+}
+
+.header__item:not(:last-child) {
+  margin: 0 0 1rem 0;
+}
+
+.header__item-link {
+  padding: 1rem;
+  text-align: center;
+  display: block;
+  color: #919191;
+  -webkit-transition: all .4s ease-in;
+  -o-transition: all .4s ease-in;
+  transition: all .4s ease-in;
+}
+
+.header__item-link:hover {
+  -webkit-box-shadow: 0.2rem 0.2rem 2rem rgba(131, 131, 131, 0.39);
+          box-shadow: 0.2rem 0.2rem 2rem rgba(131, 131, 131, 0.39);
+}
+
+.main {
+  background-color: #C1C1C1;
+}
+
+.main-body {
+  padding: 1.5rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.phone-card {
+  margin: 1rem;
+  padding: 1rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 290px;
+          flex: 0 0 290px;
+  background-color: #fff;
+  -webkit-box-shadow: 0 0 1rem .5rem grey;
+          box-shadow: 0 0 1rem .5rem grey;
+  border-radius: .5rem;
+}
+
+.phone-card__title {
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.6rem;
+  margin: 0 0 1rem 0;
+}
+
+.phone-card__img {
+  position: relative;
+  padding: 0 0 15rem 0;
+  margin: 0 0 1rem 0;
+}
+
+.phone-card__img > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.phone-card__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.phone-card__info * {
+  text-align: center;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+  margin: 0 0 1rem 0;
+}
+
+.phone-card__info * > span {
+  text-transform: uppercase;
+  padding: 0 .5rem 0 0;
+}
+
+.add-card {
+  padding: 1.5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.add-card__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+}
+
+.add-card__item:not(:last-child) {
+  margin: 0 0 1.5rem 0;
+}
+
+.add-card__lbl {
+  text-align: center;
+  display: block;
+  font-size: 1.4rem;
+  margin: 0 0 .5rem 0;
+  text-transform: uppercase;
+}
+
+.add-card__inp {
+  padding: .5rem;
+  width: 100%;
+  border: .1rem solid transparent;
+}
+
+.add-card__inp:focus {
+  border-color: grey;
+}
+
+.add-card__bttm {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  padding: .5rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.add-card__btn {
+  padding: .5em 1em;
+  font-size: 1.6rem;
+  background-color: #11ee24;
+  border-radius: .3em;
+  font-weight: 600;
+  -webkit-transition: all .3s ease-in;
+  -o-transition: all .3s ease-in;
+  transition: all .3s ease-in;
+}
+
+.add-card__btn:hover {
+  -webkit-box-shadow: 0 0 0.5em 0.5em rgba(122, 122, 122, 0.479);
+          box-shadow: 0 0 0.5em 0.5em rgba(122, 122, 122, 0.479);
+}
+
+.alert {
+  padding: 1rem;
+  color: red;
+  font-size: 1.8rem;
+  text-align: center;
+  text-transform: capitalize;
+}
+
+@media only screen and (min-width: 480px) {
+  .modal {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 400px;
+            flex: 0 0 400px;
+  }
+  .phone-card {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 320px;
+            flex: 0 0 320px;
+  }
+  .add-card__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 430px;
+            flex: 0 0 430px;
+  }
+}
+
+@media only screen and (min-width: 685px) {
+  .phone-card {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 320px;
+            flex: 0 0 320px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .modal__lbls {
+    font-size: 1.8rem;
+  }
+  .modal__inps {
+    font-size: 1.8rem;
+  }
+  .custom-chbx {
+    font-size: 1.8rem;
+  }
+  .btns__btn {
+    font-size: 2.2rem;
+  }
+  .modal-error {
+    font-size: 1.8rem;
+  }
+  .header__menu {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 30%;
+            flex: 0 0 30%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .header__curr-user {
+    border: none;
+    cursor: auto;
+  }
+  .header__curr-user::before {
+    display: none;
+  }
+  .header__curr-user:hover {
+    background-color: transparent;
+    color: #fff;
+  }
+  .header__menu-list {
+    padding: 0;
+    position: static;
+    top: auto;
+    left: auto;
+    height: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    background-color: transparent;
+  }
+  .header__menu-list_exit {
+    display: none;
+  }
+  .header__item:not(:last-child) {
+    margin: 0;
+  }
+  .header__item-link {
+    padding: 1rem;
+    color: #fff;
+  }
+  .header__item-link:hover {
+    -webkit-box-shadow: 0.2rem 0.2rem 2rem rgba(131, 131, 131, 0.39);
+            box-shadow: 0.2rem 0.2rem 2rem rgba(131, 131, 131, 0.39);
+  }
+  .add-card {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .add-card__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 48%;
+            flex: 0 0 48%;
+  }
+  .add-card__lbl {
+    font-size: 1.8rem;
+  }
+  .add-card__btn {
+    font-size: 2rem;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  .add-card {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .add-card__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 19%;
+            flex: 0 0 19%;
+  }
+}
+/*# sourceMappingURL=style.css.map */
