--- a/css/style.css
+++ b/css/style.css
@@ -359,6 +359,10 @@ h1, h2, h3, h4, h5, h6 {
   background-color: #636363;
 }
 
+.header__item {
+  text-transform: capitalize;
+}
+
 .header__item:not(:last-child) {
   margin: 0 0 1rem 0;
 }
@@ -528,6 +532,133 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: capitalize;
 }
 
+.busket__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 1rem 0 0 0;
+}
+
+.busket__item {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
+  text-transform: capitalize;
+  background-color: rgba(150, 150, 150, 0.74);
+  border: 0.1rem solid #fff;
+  margin: 0 0 1rem 0;
+}
+
+.busket__title {
+  padding: 1rem 0 0 0;
+  margin: 0 0 1rem 0;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.busket__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 35%;
+          flex: 0 0 35%;
+  position: relative;
+}
+
+.busket__img > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.busket__body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0;
+          flex: 1 0;
+}
+
+.busket__info {
+  margin: 0 0 1.5rem 0;
+  padding: .5rem;
+  font-size: 1.4rem;
+}
+
+.busket__info * {
+  margin: 0 0 .5rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.busket__bttm {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: .5rem;
+}
+
+.busket__btn-del {
+  padding: .3em 1em;
+  font-size: 1.6rem;
+  color: #fff;
+  border-radius: .3em;
+  -webkit-transition: all .2s linear;
+  -o-transition: all .2s linear;
+  transition: all .2s linear;
+  background-color: #c21f1f;
+}
+
+.busket__btn-del:hover {
+  -webkit-box-shadow: 0 0 0.5em 0.5em rgba(194, 31, 31, 0.479);
+          box-shadow: 0 0 0.5em 0.5em rgba(194, 31, 31, 0.479);
+}
+
+.busket__bttm-total {
+  font-size: 1.6rem;
+  padding: 1rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-transform: capitalize;
+}
+
+.busket__bttm-total * > span {
+  text-align: left;
+  color: #5c5c5c;
+  margin: 0 .3rem 0 0;
+}
+
 @media only screen and (min-width: 480px) {
   .modal {
     -webkit-box-flex: 0;
@@ -539,10 +670,39 @@ h1, h2, h3, h4, h5, h6 {
         -ms-flex: 0 0 320px;
             flex: 0 0 320px;
   }
+  .phone-card__title {
+    font-size: 1.8rem;
+  }
   .add-card__item {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 430px;
             flex: 0 0 430px;
+  }
+  .busket {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .busket__item {
+    width: 434px;
+  }
+  .busket__info {
+    font-size: 1.8rem;
+  }
+  .busket__btn-del {
+    font-size: 2rem;
+  }
+  .busket__bttm-total {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    font-size: 2rem;
+  }
+  .busket__bttm-total * {
+    padding: 0 1rem;
+  }
+  .busket__bttm-total * > span {
+    margin: 0 .5rem 0 0;
   }
 }
 
@@ -561,6 +721,29 @@ h1, h2, h3, h4, h5, h6 {
   .modal__inps {
     font-size: 1.8rem;
   }
+  .busket__list {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 1.5rem 0;
+  }
+  .busket__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 49%;
+            flex: 0 0 49%;
+  }
   .custom-chbx {
     font-size: 1.8rem;
   }
@@ -572,8 +755,8 @@ h1, h2, h3, h4, h5, h6 {
   }
   .header__menu {
     -webkit-box-flex: 0;
-        -ms-flex: 0 0 30%;
-            flex: 0 0 30%;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -584,9 +767,15 @@ h1, h2, h3, h4, h5, h6 {
         -ms-flex-align: center;
             align-items: center;
   }
+  .header__menu_alone {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    cursor: pointer;
+  }
   .header__curr-user {
     border: none;
-    cursor: auto;
+    cursor: pointer;
   }
   .header__curr-user::before {
     display: none;
@@ -606,9 +795,9 @@ h1, h2, h3, h4, h5, h6 {
     display: flex;
     -ms-flex-pack: distribute;
         justify-content: space-around;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     background-color: transparent;
   }
   .header__menu-list_exit {
@@ -653,6 +842,15 @@ h1, h2, h3, h4, h5, h6 {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 19%;
             flex: 0 0 19%;
+  }
+  .busket__list {
+    padding: 1.5rem 0;
+  }
+  .busket__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 30%;
+            flex: 0 0 30%;
+    margin: 0 0 1.5rem 0;
   }
 }
 /*# sourceMappingURL=style.css.map */
